--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ body::after{
     </div>
 
     <div class="ad">
-      <img src="https://hisoka.net/file/IMG-20250910-WA0124.jpg" alt="Banner Atas">
+      <img src="https://raw.githubusercontent.com/Tskuy/Save/refs/heads/main/.github/workflows/logo.png" alt="Banner Atas">
     </div>
 
     <div id="gwBoard" class="board"></div>
@@ -733,7 +733,7 @@ body::after{
     </div>
 
     <div class="ad">
-      <img src="https://hisoka.net/file/9_20251209_151249_0002.png" alt="Banner Bawah">
+      <img src="https://raw.githubusercontent.com/Tskuy/Save/refs/heads/main/.github/workflows/p.pertama.png" alt="Banner Bawah">
     </div>
 
     <div class="note">* Sistem diatur satu kali (best-effort). Hasil akan terkunci.</div>
