Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ body::after{
     </div>
 
     <div class="ad">
-      <img src="https://raw.githubusercontent.com/Tskuy/Save/refs/heads/main/.github/workflows/logo.png" alt="Banner Atas">
+      <img src="https://raw.githubusercontent.com/Tskuy/Save/refs/heads/main/.github/workflows/headerskuy.png" alt="Banner Atas">
     </div>
 
     <div id="gwBoard" class="board"></div>
@@ -764,7 +764,7 @@ body::after{
   const DB_NAME   = `gwDB${SUFFIX}`;
   const CACHE_NAME= `gwCache${SUFFIX}`;
 
-  const BG_URL    = "https://hisoka.net/file/Coklat-Aesthetic-Photo-Collage-Instagram-Story_20241123_052643_0000.png";
+  const BG_URL    = "https://raw.githubusercontent.com/Tskuy/Save/refs/heads/main/.github/workflows/bgroundskuy.png";
   const AUDIO_URL = "#";
 
   const REG_CODE_MAP = {
